# ModulesExperiments

./: AbstractBowl.cpp  AbstractBowl.cppm  AbstractBowl.h  AbstractBowl.ixx  AbstractFruit.cpp  AbstractFruit.cppm  AbstractFruit.h  AbstractFruit.ixx  Apple.cpp  Apple.cppm  Apple.h  Apple.ixx  CMakeLists.txt  FruitBowl.cpp  FruitBowl.cppm  FruitBowl.h  FruitBowl.ixx  Grape.cpp  Grape.cppm  Grape.h  Grape.ixx  README.md  SaladBowl.cpp  SaladBowl.cppm  SaladBowl.h  SaladBowl.ixx  Tomato.cpp  Tomato.cppm  Tomato.h  Tomato.ixx  abstractfruit_export.h  bowls_export.h  build-cl.bat  build.sh  check.sh  dinnerparty.cpp  fruitsalad_export.h  notfruitsalad_export.h  run.sh  std  (+2 more)
